new entries fixed problem with yang2011 not having both entries, it was the order of them in bib file

--- a/glossary/glossary.tex
+++ b/glossary/glossary.tex
@@ -36,7 +36,9 @@
 }
 \newacronym[description={American College of Rheumatology}]{acr}{ACR}{American College of Rheumatology}
 \newacronym[description={Akaike information criterion}]{aic}{AIC}{Akaike information criterion}
-
+\newacronym[description={Wellcome Trust Case-Control Consortium}]{wtccc}{WTCCC}{Wellcome Trust Case-Control Consortium}
+\newacronym[description={Atherosclerosis Risk in the Community}]{aric}{ARIC}{Atherosclerosis Risk in the Community}
+\newacronym[description={Framingham Heart Study}]{fhs}{FHS}{Framingham Heart Study}
 \newacronym[description={Kyoto Encyclopedia of Genes and Genomics}]{kegg}{KEGG}{Kyoto Encyclopedia of Genes and Genomics}
 
 \newacronym[description={Genetic relationship matrix}]{grm}{GRM}{genetic relationship matrix}
