--- a/references.bib
+++ b/references.bib
@@ -3343,21 +3343,7 @@ volume = {173},
 year = {2015}
 }
 
-@article{Yang2011part,
-abstract = {We estimate and partition genetic variation for height, body mass index (BMI), von Willebrand factor and QT interval (QTi) using 586,898 SNPs genotyped on 11,586 unrelated individuals. We estimate that ∼45{\%}, ∼17{\%}, ∼25{\%} and ∼21{\%} of the variance in height, BMI, von Willebrand factor and QTi, respectively, can be explained by all autosomal SNPs and a further ∼0.5-1{\%} can be explained by X chromosome SNPs. We show that the variance explained by each chromosome is proportional to its length, and that SNPs in or near genes explain more variation than SNPs between genes. We propose a new approach to estimate variation due to cryptic relatedness and population stratification. Our results provide further evidence that a substantial proportion of heritability is captured by common SNPs, that height, BMI and QTi are highly polygenic traits, and that the additive variation explained by a part of the genome is approximately proportional to the total length of DNA contained within genes therein.},
-author = {Yang, Jian and Manolio, Teri A and Pasquale, Louis R and Boerwinkle, Eric and Caporaso, Neil and Cunningham, Julie M and de Andrade, Mariza and Feenstra, Bjarke and Feingold, Eleanor and Hayes, M Geoffrey and Hill, William G and Landi, Maria Teresa and Alonso, Alvaro and Lettre, Guillaume and Lin, Peng and Ling, Hua and Lowe, William and Mathias, Rasika A and Melbye, Mads and Pugh, Elizabeth and Cornelis, Marilyn C and Weir, Bruce S and Goddard, Michael E and Visscher, Peter M},
-doi = {10.1038/ng.823},
-issn = {1546-1718},
-journal = {Nature genetics},
-month = {jun},
-number = {6},
-pages = {519--25},
-pmid = {21552263},
-title = {{Genome partitioning of genetic variation for complex traits using common SNPs.}},
-url = {http://www.ncbi.nlm.nih.gov/pubmed/21552263 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC4295936},
-volume = {43},
-year = {2011}
-}
+
 
 @article{Yang2011,
 abstract = {For most human complex diseases and traits, SNPs identified by genome-wide association studies (GWAS) explain only a small fraction of the heritability. Here we report a user-friendly software tool called genome-wide complex trait analysis (GCTA), which was developed based on a method we recently developed to address the "missing heritability" problem. GCTA estimates the variance explained by all the SNPs on a chromosome or on the whole genome for a complex trait rather than testing the association of any particular SNP to the trait. We introduce GCTA's five main functions: data management, estimation of the genetic relationships from SNPs, mixed linear model analysis of variance explained by the SNPs, estimation of the linkage disequilibrium structure, and GWAS simulation. We focus on the function of estimating the variance explained by all the SNPs on the X chromosome and testing the hypotheses of dosage compensation. The GCTA software is a versatile tool to estimate and partition complex trait variation with large GWAS data sets.},
@@ -3376,6 +3362,22 @@ publisher = {The American Society of Human Genetics},
 title = {{GCTA: a tool for genome-wide complex trait analysis.}},
 url = {http://www.ncbi.nlm.nih.gov/pubmed/21167468 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3014363 http://dx.doi.org/10.1016/j.ajhg.2010.11.011},
 volume = {88},
+year = {2011}
+}
+
+@article{Yang2011part,
+abstract = {We estimate and partition genetic variation for height, body mass index (BMI), von Willebrand factor and QT interval (QTi) using 586,898 SNPs genotyped on 11,586 unrelated individuals. We estimate that ∼45{\%}, ∼17{\%}, ∼25{\%} and ∼21{\%} of the variance in height, BMI, von Willebrand factor and QTi, respectively, can be explained by all autosomal SNPs and a further ∼0.5-1{\%} can be explained by X chromosome SNPs. We show that the variance explained by each chromosome is proportional to its length, and that SNPs in or near genes explain more variation than SNPs between genes. We propose a new approach to estimate variation due to cryptic relatedness and population stratification. Our results provide further evidence that a substantial proportion of heritability is captured by common SNPs, that height, BMI and QTi are highly polygenic traits, and that the additive variation explained by a part of the genome is approximately proportional to the total length of DNA contained within genes therein.},
+author = {Yang, Jian and Manolio, Teri A and Pasquale, Louis R and Boerwinkle, Eric and Caporaso, Neil and Cunningham, Julie M and de Andrade, Mariza and Feenstra, Bjarke and Feingold, Eleanor and Hayes, M Geoffrey and Hill, William G and Landi, Maria Teresa and Alonso, Alvaro and Lettre, Guillaume and Lin, Peng and Ling, Hua and Lowe, William and Mathias, Rasika A and Melbye, Mads and Pugh, Elizabeth and Cornelis, Marilyn C and Weir, Bruce S and Goddard, Michael E and Visscher, Peter M},
+doi = {10.1038/ng.823},
+issn = {1546-1718},
+journal = {Nature genetics},
+month = {jun},
+number = {6},
+pages = {519--25},
+pmid = {21552263},
+title = {{Genome partitioning of genetic variation for complex traits using common SNPs.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/21552263 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC4295936},
+volume = {43},
 year = {2011}
 }
 
@@ -3921,3 +3923,147 @@ volume = {88},
 year = {2011}
 }
 
+@article{Okada2012,
+abstract = {Chronic kidney disease (CKD), impairment of kidney function, is a serious public health problem, and the assessment of genetic factors influencing kidney function has substantial clinical relevance. Here, we report a meta-analysis of genome-wide association studies for kidney function-related traits, including 71,149 east Asian individuals from 18 studies in 11 population-, hospital- or family-based cohorts, conducted as part of the Asian Genetic Epidemiology Network (AGEN). Our meta-analysis identified 17 loci newly associated with kidney function-related traits, including the concentrations of blood urea nitrogen, uric acid and serum creatinine and estimated glomerular filtration rate based on serum creatinine levels (eGFRcrea) (P {\textless} 5.0 × 10(-8)). We further examined these loci with in silico replication in individuals of European ancestry from the KidneyGen, CKDGen and GUGC consortia, including a combined total of ∼110,347 individuals. We identify pleiotropic associations among these loci with kidney function-related traits and risk of CKD. These findings provide new insights into the genetics of kidney function.},
+author = {Okada, Yukinori and Sim, Xueling and Go, Min Jin and Wu, Jer-Yuarn and Gu, Dongfeng and Takeuchi, Fumihiko and Takahashi, Atsushi and Maeda, Shiro and Tsunoda, Tatsuhiko and Chen, Peng and Lim, Su-Chi and Wong, Tien-Yin and Liu, Jianjun and Young, Terri L and Aung, Tin and Seielstad, Mark and Teo, Yik-Ying and Kim, Young Jin and Lee, Jong-Young and Han, Bok-Ghee and Kang, Daehee and Chen, Chien-Hsiun and Tsai, Fuu-Jen and Chang, Li-Ching and Fann, S-J Cathy and Mei, Hao and Rao, Dabeeru C and Hixson, James E and Chen, Shufeng and Katsuya, Tomohiro and Isono, Masato and Ogihara, Toshio and Chambers, John C and Zhang, Weihua and Kooner, Jaspal S and Albrecht, Eva and Yamamoto, Kazuhiko and Kubo, Michiaki and Nakamura, Yusuke and Kamatani, Naoyuki and Kato, Norihiro and He, Jiang and Chen, Yuan-Tsong and Cho, Yoon Shin and Tai, E-Shyong and Tanaka, Toshihiro},
+doi = {10.1038/ng.2352},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Okada et al. - 2012 - Meta-analysis identifies multiple loci associated with kidney function–related traits in east Asian populations.pdf:pdf},
+isbn = {8135449550},
+issn = {1061-4036},
+journal = {Nature Genetics},
+number = {8},
+pages = {904--909},
+pmid = {22797727},
+publisher = {Nature Publishing Group},
+title = {{Meta-analysis identifies multiple loci associated with kidney function–related traits in east Asian populations}},
+url = {http://dx.doi.org/10.1038/ng.2352},
+volume = {44},
+year = {2012}
+}
+
+
+
+@article{Singh2009,
+abstract = {The highly co-evolved relationship of parasites and their hosts appears to include modulation of host immune signals, although the molecular mechanisms involved in the host-parasite interplay remain poorly understood. Characterization of these key genes and their cognate proteins related to the host-parasite interplay should lead to a better understanding of this intriguing biological phenomenon. The malaria agent Plasmodium falciparum is predicted to export a cohort of several hundred proteins to remodel the host erythrocyte. However, proteins actively exported by the asexual intracellular parasite beyond the host red blood cell membrane (before merozoite egress) have been poorly investigated so far. Here we used two complementary methodologies, two-dimensional gel electrophoresis/MS and LC-MS/MS, to examine the extracellular secreted antigens at asexual blood stages of P. falciparum. We identified 27 novel antigens exported by P. falciparum in the culture medium of which some showed clustering with highly polymorphic genes on chromosomes, suggesting that they may encode putative antigenic determinants of the parasite. Immunolocalization of four novel secreted proteins confirmed their export beyond the infected red blood cell membrane. Of these, preliminary functional characterization of two novel (Sel1 repeat-containing) parasite proteins, PfSEL1 and PfSEL2 revealed that they down-regulate expression of cell surface Notch signaling molecules in host cells. Also a novel protein kinase (PfEK) and a novel protein phosphatase (PfEP) were found to, respectively, phosphorylate/dephosphorylate parasite-specific proteins in the extracellular culture supernatant. Our study thus sheds new light on malaria parasite extracellular secreted antigens of which some may be essential for parasite development and could constitute promising new drug targets.},
+author = {Singh, Meha and Mukherjee, Paushali and Narayanasamy, Krishnamoorthy and Arora, Reena and Sen, Som Dutta and Gupta, Shashank and Natarajan, Krishnamurthy and Malhotra, Pawan},
+doi = {10.1074/mcp.M900029-MCP200},
+file = {:home/murraycadzow/Dropbox/Papers/zjw2102.pdf:pdf},
+isbn = {1535-9484 (Electronic)$\backslash$r1535-9476 (Linking)},
+issn = {1535-9476},
+journal = {Molecular {\&} Cellular Proteomics},
+number = {9},
+pages = {2102--2118},
+pmid = {19494339},
+title = {{Proteome Analysis of {\textless}i{\textgreater}Plasmodium falciparum{\textless}/i{\textgreater} Extracellular Secretory Antigens at Asexual Blood Stages Reveals a Cohort of Proteins with Possible Roles in Immune Modulation and Signaling}},
+url = {http://www.mcponline.org/lookup/doi/10.1074/mcp.M900029-MCP200},
+volume = {8},
+year = {2009}
+}
+
+@article{Olijhoek2007,
+abstract = {Background: Several definitions exist for the metabolic syndrome. In concert with the blood pressure and glucose criteria of the NCEP definition, it has now been suggested that the use of fibrates and nicotinic acid be incorporated into the dyslipidemia criteria. While statins are the drugs most widely prescribed for lowering LDL-cholesterol, they also affect triglyceride and HDL-cholesterol levels. The aims of the present study were (1) to investigate how adding lipid-lowering therapy to the NCEP definition might influence the prevalence of the metabolic syndrome and (2) to compare the characteristics of patients identified according to the newly proposed IDF definition with those identified according to the NCEP definition. Methods: We conducted a cross-sectional study on 2373 patients with clinically manifest vascular disease. In order to allow for the influence of lipid-lowering therapy on the identification of patients with the metabolic syndrome, the NCEP definition was modified in two ways. In NCEP-rev1, the use of lipid-lowering agents fulfilled the hypertriglyceridemia criterion; in NCEP-rev2, triglycerides and HDL-cholesterol plasma concentrations were recalculated for lipid-lowering agents. Results: The prevalence of the metabolic syndrome was 41{\%} according to the NCEP definition, 50{\%} according to the NCEP-rev1, 44{\%} according to the NCEP-rev2, and 52{\%} according to the IDF definition. Patients identified only with the NCEP definition had lower HDL-cholesterol, higher triglycerides, and higher fasting glucoses levels than patients only diagnosed with the IDF definition. Conclusion: Adding the use of lipid-lowering drugs to the NCEP definition may lead to the identification of an additional group of patients at an elevated risk for cardiovascular diseases and diabetes. The NCEP definition of the metabolic syndrome identifies patients with a worse cardiovascular risk profile than patients qualifying for the metabolic syndrome with the IDF definition in a cohort of patients with clinical manifestations of vascular disease. {\textcopyright} 2007 Elsevier B.V. All rights reserved.},
+author = {Olijhoek, Jobien K. and van der Graaf, Yolanda and Haffner, Steven M. and Visseren, Frank L J},
+doi = {10.1016/j.ejim.2006.10.007},
+file = {:home/murraycadzow/Dropbox/Papers/1-s2.0-S0953620507000829-main.pdf:pdf},
+isbn = {09536205 (ISSN)},
+issn = {09536205},
+journal = {European Journal of Internal Medicine},
+keywords = {Cardiovascular risk,Definitions,Lipid-lowering therapy,Metabolic syndrome},
+number = {4},
+pages = {309--313},
+pmid = {17574106},
+title = {{Defining the metabolic syndrome: Resolving unresolved issues?}},
+volume = {18},
+year = {2007}
+}
+
+@article{Phipps-Green2016,
+abstract = {OBJECTIVES Twenty-eight genetic loci are associated with serum urate levels in Europeans. Evidence for association with gout at most loci is absent, equivocal or not replicated. Our aim was to test the loci for association with gout meeting the American College of Rheumatology gout classification criteria in New Zealand European and Polynesian case-control sample sets. METHODS 648 European cases and 1550 controls, and 888 Polynesian (Ma¯ori and Pacific) cases and 1095 controls were genotyped. Association with gout was tested by logistic regression adjusting for age and sex. Power was adequate ({\textgreater}0.7) to detect effects of OR{\textgreater}1.3. RESULTS We focused on 24 loci without previous consistent evidence for association with gout. In Europeans, we detected association at seven loci, one of which was the first report of association with gout (IGF1R). In Polynesian, association was detected at three loci. Meta-analysis revealed association at eight loci-two had not previously been associated with gout (PDZK1 and MAF). In participants with higher Polynesian ancestry, there was association in an opposing direction to Europeans at PRKAG2 and HLF (HLF is the first report of association with gout). There was obvious inconsistency of gout association at four loci (GCKR, INHBC, SLC22A11, SLC16A9) that display very similar effects on urate levels. CONCLUSIONS We provide the first evidence for association with gout at four loci (IGF1R, PDZK1, MAF, HLF). Understanding why there is lack of correlation between urate and gout effect sizes will be important in understanding the aetiology of gout.},
+author = {Phipps-Green, A J and Merriman, M E and Topless, R and Altaf, S and Montgomery, G W and Franklin, C and Jones, G T and van Rij, A M and White, D and Stamp, L K and Dalbeth, N and Merriman, T R},
+doi = {10.1136/annrheumdis-2014-205877},
+file = {:home/murraycadzow/Dropbox/Papers/Ann Rheum Dis-2016-Phipps-Green-124-30.pdf:pdf;:home/murraycadzow/Dropbox/Papers/124.full.pdf:pdf},
+issn = {1468-2060},
+journal = {Annals of the rheumatic diseases},
+keywords = {Epidemiology,Gene Polymorphism,Gout},
+number = {1},
+pages = {124--30},
+pmid = {25187157},
+title = {{Twenty-eight loci that influence serum urate levels: analysis of association with gout.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/25187157},
+volume = {75},
+year = {2016}
+}
+
+@article{Akaike1974,
+abstract = {The history of the development of statistical hypothesis testing in time series analysis is reviewed briefly and it is pointed out that the hypothesis testing procedure is not adequately defined as the procedure for statistical model identification. The classical maximum likelihood estimation procedure is reviewed and a new estimate minimum information theoretical criterion (AIC) estimate (MAICE) which is designed for the purpose of statistical identification is introduced. When there are several competing models the MAICE is defined by the model and the maximum likelihood estimates of the parameters which give the minimum of AIC defined by AIC = (-2)log-(maximum likelihood) + 2(number of independently adjusted parameters within the model). MAICE provides a versatile procedure for statistical model identification which is free from the ambiguities inherent in the application of conventional hypothesis testing procedure. The practical utility of MAICE in time series analysis is demonstrated with some numerical examples.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1011.1669v3},
+author = {Akaike, Hirotugu},
+doi = {10.1109/TAC.1974.1100705},
+eprint = {arXiv:1011.1669v3},
+file = {:home/murraycadzow/Dropbox/Papers/01100705.pdf:pdf},
+isbn = {0018-9286 VO - 19},
+issn = {15582523},
+journal = {IEEE Transactions on Automatic Control},
+number = {6},
+pages = {716--723},
+pmid = {1100705},
+title = {{A New Look at the Statistical Model Identification}},
+volume = {19},
+year = {1974}
+}
+
+@article{Woodward2009,
+abstract = {Genome-wide association studies (GWAS) have successfully identified common single nucleotide polymorphisms (SNPs) associated with a wide variety of complex diseases, but do not address gene function or establish causality of disease-associated SNPs. We recently used GWAS to identify SNPs in a genomic region on chromosome 4 that associate with serum urate levels and gout, a consequence of elevated urate levels. Here we show using functional assays that human ATP-binding cassette, subfamily G, 2 (ABCG2), encoded by the ABCG2 gene contained in this region, is a hitherto unknown urate efflux transporter. We further show that native ABCG2 is located in the brush border membrane of kidney proximal tubule cells, where it mediates renal urate secretion. Introduction of the mutation Q141K encoded by the common SNP rs2231142 by site-directed mutagenesis resulted in 53{\%} reduced urate transport rates compared to wild-type ABCG2 (P {\textless} 0.001). Data from a population-based study of 14,783 individuals support rs2231142 as the causal variant in the region and show highly significant associations with urate levels [whites: P = 10(-30), minor allele frequency (MAF) 0.11; blacks P = 10(-4), MAF 0.03] and gout (adjusted odds ratio 1.68 per risk allele, both races). Our data indicate that at least 10{\%} of all gout cases in whites are attributable to this causal variant. With approximately 3 million US individuals suffering from often insufficiently treated gout, ABCG2 represents an attractive drug target. Our study completes the chain of evidence from association to causation and supports the common disease-common variant hypothesis in the etiology of gout.},
+author = {Woodward, Owen M and K{\"{o}}ttgen, Anna and Coresh, Josef and Boerwinkle, Eric and Guggino, William B and K{\"{o}}ttgen, Michael},
+doi = {10.1073/pnas.0901249106},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Woodward et al. - 2009 - Identification of a urate transporter, ABCG2, with a common functional polymorphism causing gout.pdf:pdf},
+isbn = {0901249106},
+issn = {1091-6490},
+journal = {Proceedings of the National Academy of Sciences of the United States of America},
+keywords = {ATP-Binding Cassette Transporters,ATP-Binding Cassette Transporters: genetics,ATP-Binding Cassette Transporters: physiology,Amino Acid Sequence,Animals,Epithelial Cells,Epithelial Cells: metabolism,Female,Gout,Gout: genetics,Gout: metabolism,Humans,Hyperuricemia,Hyperuricemia: genetics,Kidney Tubules, Proximal,Kidney Tubules, Proximal: metabolism,Molecular Sequence Data,Neoplasm Proteins,Neoplasm Proteins: genetics,Neoplasm Proteins: physiology,Oocytes,Polymorphism, Single Nucleotide,Uric Acid,Uric Acid: blood,Uric Acid: metabolism,Xenopus laevis},
+mendeley-groups = {Metabolic Syndrome/Gout},
+month = {jun},
+number = {25},
+pages = {10338--42},
+pmid = {19506252},
+title = {{Identification of a urate transporter, ABCG2, with a common functional polymorphism causing gout.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=2700910{\&}tool=pmcentrez{\&}rendertype=abstract},
+volume = {106},
+year = {2009}
+}
+
+@article{Deschamps2016,
+abstract = {Human genes governing innate immunity provide a valuable tool for the study of the selective pressure imposed by microorganisms on host genomes. A comprehensive, genome-wide study of how selective constraints and adaptations have driven the evolution of innate immunity genes is missing. Using full-genome sequence variation from the 1000 Genomes Project, we first show that innate immunity genes have globally evolved under stronger purifying selection than the remainder of protein-coding genes. We identify a gene set under the strongest selective constraints, mutations in which are likely to predispose individuals to life-threatening disease, as illustrated by STAT1 and TRAF3. We then evaluate the occurrence of local adaptation and detect 57 high-scoring signals of positive selection at innate immunity genes, variation in which has been associated with susceptibility to common infectious or autoimmune diseases. Furthermore, we show that most adaptations targeting coding variation have occurred in the last 6,000-13,000 years, the period at which populations shifted from hunting and gathering to farming. Finally, we show that innate immunity genes present higher Neandertal introgression than the remainder of the coding genome. Notably, among the genes presenting the highest Neandertal ancestry, we find the TLR6-TLR1-TLR10 cluster, which also contains functional adaptive variation in Europeans. This study identifies highly constrained genes that fulfill essential, non-redundant functions in host survival and reveals others that are more permissive to change - containing variation acquired from archaic hominins or adaptive variants in specific populations - improving our understanding of the relative biological importance of innate immunity pathways in natural conditions.},
+author = {Deschamps, Matthieu and Laval, Guillaume and Fagny, Maud and Itan, Yuval and Abel, Laurent and Casanova, Jean Laurent and Patin, Etienne and Quintana-Murci, Lluis},
+doi = {10.1016/j.ajhg.2015.11.014},
+file = {:home/murraycadzow/Dropbox/Papers/1-s2.0-S0002929715004851-main.pdf:pdf},
+isbn = {0002-9297},
+issn = {15376605},
+journal = {American Journal of Human Genetics},
+number = {1},
+pages = {5--21},
+pmid = {26748513},
+publisher = {The American Society of Human Genetics},
+title = {{Genomic Signatures of Selective Pressures and Introgression from Archaic Hominins at Human Innate Immunity Genes}},
+url = {http://dx.doi.org/10.1016/j.ajhg.2015.11.014},
+volume = {98},
+year = {2016}
+}
+
+@article{Yang2010,
+abstract = {BACKGROUND: Elevated serum urate levels can lead to gout and are associated with cardiovascular risk factors. We performed a genome-wide association study to search for genetic susceptibility loci for serum urate and gout and investigated the causal nature of the associations of serum urate with gout and selected cardiovascular risk factors and coronary heart disease (CHD).$\backslash$n$\backslash$nMETHODS AND RESULTS: Meta-analyses of genome-wide association studies (GWAS) were performed in 5 population-based cohorts of the Cohorts for Heart and Aging Research in Genome Epidemiology consortium for serum urate and gout in 28 283 white participants. The effect of the most significant single-nucleotide polymorphism at all genome-wide significant loci on serum urate was added to create a genetic urate score. Findings were replicated in the Women's Genome Health Study (n=22 054). Single-nucleotide polymorphisms at 8 genetic loci achieved genome-wide significance with serum urate levels (P=4×10(-8) to 2×10(-242) in SLC22A11, GCKR, R3HDM2-INHBC region, RREB1, PDZK1, SLC2A9, ABCG2, and SLC17A1). Only 2 loci (SLC2A9, ABCG2) showed genome-wide significant association with gout. The genetic urate score was strongly associated with serum urate and gout (odds ratio, 12.4 per 100 $\mu$mol/L; P=3×10(-39)) but not with blood pressure, glucose, estimated glomerular filtration rate, chronic kidney disease, or CHD. The lack of association between the genetic score and the latter phenotypes also was observed in the Women's Genome Health Study.$\backslash$n$\backslash$nCONCLUSIONS: The genetic urate score analysis suggested a causal relationship between serum urate and gout but did not provide evidence for one between serum urate and cardiovascular risk factors and CHD.},
+author = {Yang, Qiong and K{\"{o}}ttgen, Anna and Dehghan, Abbas and Smith, Albert V. and Glazer, Nicole L. and Chen, Ming Huei and Chasman, Daniel I. and Aspelund, Thor and Eiriksdottir, Gudny and Harris, Tamara B. and Launer, Lenore and Nalls, Michael and Hernandez, Dena and Arking, Dan E. and Boerwinkle, Eric and Grove, Megan L. and Li, Man and {Linda Kao}, W. H. and Chonchol, Michel and Haritunians, Talin and Li, Guo and Lumley, Thomas and Psaty, Bruce M. and Shlipak, Michael and Hwang, Shih Jen and Larson, Martin G. and O'Donnell, Christopher J. and Upadhyay, Ashish and {Van Duijn}, Cornelia M. and Hofman, Albert and Rivadeneira, Fernando and Stricker, Bruno and Uitterlinden, Andre G. and Par{\'{e}}, Guillaume and Parker, Alex N. and Ridker, Paul M. and Siscovick, David S. and Gudnason, Vilmundur and Witteman, Jacqueline C. and Fox, Caroline S. and Coresh, Josef},
+doi = {10.1161/CIRCGENETICS.109.934455},
+file = {:home/murraycadzow/Dropbox/Papers/523.full.pdf:pdf},
+isbn = {1942-3268},
+issn = {1942325X},
+journal = {Circulation: Cardiovascular Genetics},
+keywords = {Cardiovascular diseases,Genome-wide association study,Gout,Mendelian randomization analysis,Risk factors,Uric acid},
+number = {6},
+pages = {523--530},
+pmid = {20884846},
+title = {{Multiple genetic loci influence serum urate levels and their relationship with gout and cardiovascular disease risk factors}},
+volume = {3},
+year = {2010}
+}
